--- a/app/dashboard/views/_data.ejs
+++ b/app/dashboard/views/_data.ejs
@@ -43,18 +43,30 @@
   <td>
     <span class="label {{= (ping.isUp ? 'label-success' : 'label-important') }}">{{= (ping.isUp ? 'Up' : 'Down') }}</span>
     {{ if (ping.isUp && !ping.isResponsive) { }}<span class="label label-warning">Slow</span>{{ } }}
+    {{ if (ping.isUp && ping.isSmall) { }}<span class="label label-warning">Small</span>{{ } }}
   </td>
   <td>{{= parseInt(ping.time) }}ms</td>
   <td>
     {{ if (pingHasValidUrl(ping)) { }}
       <a href="{{= ping.details.url }}">See report</a>
     {{ } }}
+    {{ if (pingHasValidLocation(ping)) { }}
+      <span>{{= pingHasValidLocation(ping) }}</span>
+    {{ } }}
+    
   </td>
   <td class="error">{{= ping.error || '' }}</td>
 </tr>
 </script>
 <script>
 $(document).ready(function() {
+  var pingHasValidLocation = function(ping) {
+  	if(!ping.details || typeof ping.details.length == 'undefined'){ return false};
+  	console.info('ping.details');
+  	console.log(ping.details);
+  	console.log(ping.details.length);
+    return ping.details.length+'b';
+  };
   var pingHasValidUrl = function(ping) {
     return ping.details && ping.details.url && /^([a-z]([a-z]|\d|\+|-|\.)*):(\/\/(((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:)*@)?((\[(|(v[\da-f]{1,}\.(([a-z]|\d|-|\.|_|~)|[!\$&'\(\)\*\+,;=]|:)+))\])|((\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5])\.(\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5])\.(\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5])\.(\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5]))|(([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=])*)(:\d*)?)(\/(([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)*)*|(\/((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)+(\/(([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)*)*)?)|((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)+(\/(([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)*)*)|((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)){0})(\?((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)|[\uE000-\uF8FF]|\/|\?)*)?(\#((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)|\/|\?)*)?$/i.test(ping.details.url);
   };
@@ -76,7 +88,7 @@ $(document).ready(function() {
     if (type == 'hour') {
       // display pings
       $.each(stats, function(key, stat) {
-          lines.unshift(ejs.render(ping_template, { ping: stat, pingHasValidUrl: pingHasValidUrl }));
+          lines.unshift(ejs.render(ping_template, { ping: stat, pingHasValidUrl: pingHasValidUrl, pingHasValidLocation: pingHasValidLocation }));
       });
       $('#data .stat').hide();
       $('#data .ping tbody').html(lines.join(''));
