--- a/app/dashboard/views/_data.ejs
+++ b/app/dashboard/views/_data.ejs
@@ -38,12 +38,12 @@
 </tr>
 </script>
 <script id="ping_template" type="text/template">
-<tr class="{{= !ping.isUp ? 'red' : !ping.isResponsive ? 'orange' : '' }}">
+<tr class="{{= !ping.isUp ? 'red' : !ping.isResponsive ? 'orange' : '' }}{{= ping.isSmall ? ping.details.length===0 ? 'red':'orange' : ''}}">
   <td title="{{= new Date(ping.timestamp) }}">{{= moment(ping.timestamp).format('LLLL') }}</td>
   <td>
     <span class="label {{= (ping.isUp ? 'label-success' : 'label-important') }}">{{= (ping.isUp ? 'Up' : 'Down') }}</span>
     {{ if (ping.isUp && !ping.isResponsive) { }}<span class="label label-warning">Slow</span>{{ } }}
-    {{ if (ping.isUp && ping.isSmall) { }}<span class="label label-warning">Small</span>{{ } }}
+    {{ if (ping.isUp && ping.isSmall) { }}<span class="label label-{{= ping.details.length===0 ? 'important':'warning'}}">{{= ping.details.length===0 ? 'No Data':'Small'}}</span>{{ } }}
   </td>
   <td>{{= parseInt(ping.time) }}ms</td>
   <td>
