--- a/app/dashboard/views/_checkDetails.ejs
+++ b/app/dashboard/views/_checkDetails.ejs
@@ -55,8 +55,17 @@
                 <% if (check.lastTested) { %>
                 <a class="btn" name="pause"><i class="icon-<%= check.isPaused ? 'play' : 'pause' %>"></i></a>
                 <% } %>
-                <input type="text" name="check[interval]" value="<%= (check.interval / 1000).toFixed() %>" class="span2" />
-                <span class="add-on">s</span>
+                <!--<input type="text" name="check[interval]" value="<%= (check.interval / 1000).toFixed() %>" class="span2" />-->
+                <select  name="check[interval]"  class="span2">
+                	<option value="60"<% if (check.interval   == 60000) { %> selected="selected"<% } %>>1</option>
+                	<option value="120"<% if (check.interval  == 120000) { %> selected="selected"<% } %>>2</option>
+                	<option value="300"<% if (check.interval  == 300000) { %> selected="selected"<% } %>>5</option>
+                	<option value="600"<% if (check.interval  == 600000) { %> selected="selected"<% } %>>10</option>
+                	<option value="900"<% if (check.interval  == 900000) { %> selected="selected"<% } %>>15</option>
+                	<option value="1200"<% if (check.interval == 1200000) { %> selected="selected"<% } %>>20</option>
+                	<option value="1800"<% if (check.interval == 1800000) { %> selected="selected"<% } %>>30</option>
+                </select>
+                <span class="add-on">min(s)</span>
               </div>
             </div>
           </div>
@@ -69,8 +78,22 @@
             <label class="control-label">Slow threshold</label>
             <div class="controls">
               <div class="input-append">
-                <input type="text" name="check[maxTime]" value="<%= check.maxTime %>" class="span1" />
-                <span class="add-on">ms</span>
+                <!--<input type="text" name="check[maxTime]" value="<%= check.maxTime %>" class="span1" />-->
+                <select name="check[maxTime]" class="span1">
+					<option value="100"<% if (check.maxTime == 100) { %> selected="selected"<% } %>>0.1</option>
+					<option value="200"<% if (check.maxTime == 200) { %> selected="selected"<% } %>>0.2</option>
+					<option value="300"<% if (check.maxTime == 300) { %> selected="selected"<% } %>>0.3</option>
+					<option value="500"<% if (!check.maxTime || check.maxTime == 500) { %> selected="selected"<% } %>>0.5</option>
+					<option value="1000"<% if (check.maxTime == 1000) { %> selected="selected"<% } %>>1</option>
+					<option value="1500"<% if (check.maxTime == 1500) { %> selected="selected"<% } %>>1.5</option>
+					<option value="2000"<% if (check.maxTime == 2000) { %> selected="selected"<% } %>>2</option>
+					<option value="2500"<% if (check.maxTime == 2500) { %> selected="selected"<% } %>>2.5</option>
+					<option value="3000"<% if (check.maxTime == 3000) { %> selected="selected"<% } %>>3</option>
+					<option value="3500"<% if (check.maxTime == 3500) { %> selected="selected"<% } %>>3.5</option>
+					<option value="4000"<% if (check.maxTime == 4000) { %> selected="selected"<% } %>>4</option>
+					<option value="4500"<% if (check.maxTime == 4500) { %> selected="selected"<% } %>>4.5</option>
+                </select>
+                <span class="add-on">s</span>
               </div>
             </div>
           </div>
