--- a/app/dashboard/views/_checkDetails.ejs
+++ b/app/dashboard/views/_checkDetails.ejs
@@ -131,7 +131,7 @@
     </span>
 
     <fieldset>
-      <div class="control-group">
+      <div class="control-group hidden">
         <label class="control-label">Tags</label>
         <div class="controls">
           <textarea name="check[tags]" rows="2"/><%= check.tags.join(', ') %></textarea>
