--- a/app/dashboard/views/check.ejs
+++ b/app/dashboard/views/check.ejs
@@ -48,7 +48,7 @@ ejs.close = '}}';
       <li><a href="#events">Downtime<i class="icon-chevron-right"></i><br/><strong class="downtime"></strong></a></li>
       <li><a href="#responseTime" title="Average response time over the period">Response Time<i class="icon-chevron-right"></i><br/><strong class="avgRespTime"></strong>ms</a></li>
       <li><a href="#responsiveness" title="Percentage of pings above slow treshold over the period">Responsiveness<i class="icon-chevron-right"></i><br/><strong class="responsiveness"></strong>%</a></li>
-      <li><a href="#datasizes" title="Average response size time over the period">Response Size<i class="icon-chevron-right"></i><br/><strong class="avgDataSize"></strong>b</a></li>
+      <li><a href="#datasizes" title="Average response size time over the period">Response Size<i class="icon-chevron-right"></i><br/><strong class="avgDataSize"></strong></a></li>
       <li><a href="#data">Data<i class="icon-chevron-right"></i></a></li>
     </ul>
   </div>
